[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0627451, 0.0784314, 0.121569, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopMainBar" type="HBoxContainer" parent="MainContainer"]
margin_right = 1024.0
margin_bottom = 32.0

[node name="NewBRDText" type="LineEdit" parent="MainContainer/TopMainBar"]
margin_right = 1001.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "BRD Title"

[node name="AddBRDButton" type="Button" parent="MainContainer/TopMainBar"]
margin_left = 1005.0
margin_right = 1024.0
margin_bottom = 32.0
size_flags_vertical = 3
text = "+"

[node name="BRDTabs" type="TabContainer" parent="MainContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
environment = SubResource( 1 )

[connection signal="pressed" from="MainContainer/TopMainBar/AddBRDButton" to="." method="_on_AddBRDButton_pressed"]
